# easy-transcode

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Melt.py  README.org  autogen.sh  configure.ac  convert.py  dropwidget.ui  dropwindow.ui  mbc-transcode.desktop  setup.py  transcode.py
data/: Makefile.am  mbc-zumo.desktop.in.in
data/ui/: Makefile.am  dropwidget.ui  dropwindow.ui  simple.ui
debian/: changelog  control  copyright  rules
lib/: Drop.py  MBC.py  Makefile.am  Melt.py  XA.py  configure.py.in  i18n.py
m4/: ChangeLog
po/: LINGUAS  POTFILES.in  ar.po  ast.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  eo.po  es.po  es_AR.po  et.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  it.po  ja.po  ko.po  ku.po  lv.po  mr.po  nb.po  nds.po  nl.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  (+11 more)
